src/parser/snapshots/tests__template.empty_template.snap
---
created: "2019-02-13T07:58:06.314238Z"
creator: insta@0.6.2
source: src/parser/template.rs
expression: templates
---
[
    Template {
        name: "main",
        indent_ignored: 4,
        lines: []
    }
]
