src/parser/snapshots/tests__template.mixed_indentation.snap
---
created: "2019-02-13T07:58:06.314260Z"
creator: insta@0.6.2
source: src/parser/template.rs
expression: templates
---
[
    Template {
        name: "main",
        indent_ignored: 4,
        lines: [
            TemplateLine {
                indentation: "    \t",
                segments: [
                    Content(
                        "indent"
                    )
                ]
            }
        ]
    }
]
